--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <title>%VITE_APP_TITLE% - 站点监测</title>
     <meta name="description" content="简洁的状态监控" />
     <meta name="keywords" content="状态监控, 站点监测, 监控, 状态, 站点" />
-    <meta name="author" content="梦爱吃鱼" />
-    <meta name="copyright" content="梦爱吃鱼" />
+    <meta name="author" content="琦月监测" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
-    <!-- 统计 -->
-    <script defer src="https://um.ruom.top/script.js" data-website-id="ef582935-916b-40a8-888c-918415a49f20"></script>
     <!-- 字体 -->
-    <link rel="stylesheet" href="https://s1.hdslb.com/bfs/static/jinkela/long/font/regular.css">
+    <link
+      rel="stylesheet"
+      href="https://s1.hdslb.com/bfs/static/jinkela/long/font/regular.css"
+    />
     <script>
       if (false || (!!window.MSInputMethodContext && !!document.documentMode))
         window.location.href =
-          'https://support.dmeng.net/upgrade-your-browser.html?referrer=' +
+          "https://support.dmeng.net/upgrade-your-browser.html?referrer=" +
           encodeURIComponent(window.location.href);
     </script>
     <!-- 禁用右键 -->
